Fixed the AppLauncher and fixed MainBar on mobile devices*
* Fix of mainbar not done

--- a/apps/clean.css
+++ b/apps/clean.css
@@ -17,12 +17,42 @@ h1
   bottom:0;
   z-index:5242;
   height: 3.25%;
-  font-size:27pt;
+  font-size:28pt;
   font-family: Lucida Console;
   text-align:center;
   color:#686868;
+  vertical-align: top;
 }
 .cursor
 {
   cursor: url(cursor.gif),auto;
 }
+/* Mobile */
+@media screen and (max-width: 800px){
+  #mainBar
+  {
+    padding-bottom:5.5%;
+
+  }
+  #dockContainer
+  {
+    margin-bottom:1.5%;
+
+  }
+}
+@media only screen 
+and (max-device-width : 800px) 
+and (orientation : landscape) {
+/* Styles */
+    #mainBar
+  {
+    padding-bottom:4.5%;
+
+  }
+  #dockContainer
+  {
+    margin-bottom:2.5%;
+
+  }
+}
+/**/
